# privchat-server

./: Cargo.toml  README.md
config/: config.ini
src/: config.rs  connection_manager.rs  gate_server.rs  handlers.rs  main.rs  server.rs
src/service/: chat.rs  contact.rs  file.rs  group.rs  history.rs  image.rs  mod.rs  notification.rs  push.rs  share.rs  sticker.rs  user.rs
