[package]
name = "privchat"
version = "0.1.0"
edition = "2021"

[dependencies]
seahorse = "2"
config = "0.14"
msgtrans = { path = "../msgtrans-rust" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
busybody = "0.3.12"